versioned_docs/version-2025.2.5/turma/turma.md
---
sidebar_position: 1
---

# Turmas

## Agropecuária - Técnico Integrado ao Ensino Médio
- [Ago 2023](turma/ago2023)
- [Ago 2024](turma/ago2024)
- [Ago 2025](turma/ago2025)
- [Ago 2025 - Grupo A](turma/ago2025_-_grupo_a)
- [Ago 2025 - Grupo B](turma/ago2025_-_grupo_b)

## Comércio - Técnico Integrado ao Ensino Médio
- [Com 2023](turma/com2023)
- [Com 2024](turma/com2024)
- [Com 2025](turma/com2025)

## Eletromecânica - Técnico Integrado ao Ensino Médio
- [Ein 2022](turma/ein2022)
- [Ein 2023](turma/ein2023)
- [Ein 2024](turma/ein2024)
- [Ein 2025](turma/ein2025)
- [Ein 2025 - Grupo A](turma/ein2025_-_grupo_a)
- [Ein 2025 - Grupo B](turma/ein2025_-_grupo_b)

## Informática para Internet (Campus) - Técnico Integrado ao Ensino Médio
- [Iiw 2023a](turma/iiw2023a)
- [Iiw 2024a](turma/iiw2024a)
- [Iiw 2025a](turma/iiw2025a)

## Informática para Internet (CR Toledo) - Técnico Integrado ao Ensino Médio
- [Iiw 2023b](turma/iiw2023b)
- [Iiw 2024b](turma/iiw2024b)
- [Iiw 2025b](turma/iiw2025b)
- [Iiw 2025b - Grupo A](turma/iiw2025b_-_grupo_a)
- [Iiw 2025b - Grupo B](turma/iiw2025b_-_grupo_b)

## Agropecuária - Técnico Subsequente
- [Agr 2024](turma/agr2024)
- [Agr 2025](turma/agr2025)

## Alimentos - Técnico Subsequente
- [Tal 2024](turma/tal2024)
- [Tal 2025](turma/tal2025)

## Eletromecânica - Técnico Subsequente
- [Elm 2024](turma/elm2024)
- [Elm 2025](turma/elm2025)

## Eletrotécnica - Técnico Subsequente
- [Ele 2024](turma/ele2024)
- [Ele 2025](turma/ele2025)

## Análise e Desenvolvimento de Sistemas - Graduação
- [Tads Esp](turma/tads_esp)

## Ciências Biológicas - Graduação
- [Bio Especial 1](turma/bio_especial_1)
- [Bio Especial 2](turma/bio_especial_2)

## Gestão Comercial - Graduação 
- [Tgc 2024](turma/tgc2024)
- [Tgc 2025](turma/tgc2025)


## EGE - Especialização
- [Ege 2024](turma/ege2024)

## FPE - Lingua Portuguesa para Estrangeiros
- [FPE 2025](turma/fpe2025)


## FIC Mulheres Mil (Formação Inicial e Continuada)
- [FAO2025-1](turma/fao2025-1)

## Curso de Aperfeiçoamento em Educação das Relações Étnico-Raciais (ERER) - IFPR UAB (Universidade Aberta do Brasil)
- [ERE2025](turma/erer2025)

## Técnico em Logistica EAD (TLEAD) - IFPR (Campus Assis Chateaubriand)
- [TLEAD2025](turma/eadtl2025)

## Técnico em Serviços Públicos EAD (TSPEAD) - IFPR (Campus Assis Chateaubriand)
- [TSPEAD2025](turma/eadsp2025)

## Técnico em Segurança do Trabalho EAD (TSTEAD) - IFPR (Campus Assis Chateaubriand)
- [TSTEAD2025](turma/eadst2025)

## Técnico em Meio Ambiente EAD (TMAEAD) - IFPR (Campus Assis Chateaubriand)
- [TMAEAD2025](turma/eadtma2025)
